# dane_api

./: .env  .gitignore  docker-compose.yml
arango/: init.js
postgres/: Dockerfile.dev
python/: Dockerfile.dev
python/Georeferencer/: pyproject.toml
python/Georeferencer/fastapi/: main.py
python/Georeferencer/fastapi/alembic/: env.py
python/Georeferencer/fastapi/alembic/versions/: ec44248b5ec0_create_users_table.py
python/Georeferencer/fastapi/app/: database.py  models.py  schemas.py
python/Georeferencer/fastapi/app/routers/: __init__.py  datasets.py  informationsubtopics.py  informationtopics.py  managers.py  users.py
python/Georeferencer/fastapi/app/static/HTML/: index.html
