[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "environ>=1.0",
    "fastapi>=0.135.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
